fix(Icon): smaller content alignment

--- a/src/components/Icon/Icon.module.css
+++ b/src/components/Icon/Icon.module.css
@@ -2,6 +2,7 @@
 	/* Center svg in squared icon */
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	aspect-ratio: 1;
 }
 
